--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header>AprendaClashRoyale</header>
+    <header>Clash All</header>
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Como jogar Clash Royale do zero? / dicas para iniciantes (Guia de como jogar Clash Royale)</h1>
